--- a/Parcial1/PeticionParametros/style.css
+++ b/Parcial1/PeticionParametros/style.css
@@ -1,21 +1,20 @@
-/* Estilo para el label "Categorias" */
+
 label {
-    font-size: 18px; /* Cambia el tamaño de fuente según tus preferencias */
+    font-size: 18px; 
 }
-/* Cambiar el color de fondo de toda la página */
+
 body {
-    background-color: #f7dded; /* Puedes cambiar este color a tu preferencia */
+    background-color: #f7dded;
 }
 
-/* Estilo para el título */
+
 .titulo {
-    color: #33a3ff; /* Cambiar el color del texto */
-    font-size: 28px; /* Cambiar el tamaño de fuente */
-    text-align: center; /* Cambiar la alineación del texto */
+    color: #33a3ff;
+    font-size: 28px; 
+    text-align: center; 
 }
 
 
-/* Estilo para el botón */
 #ButtonBuscar {
     padding: 10px 20px;
     font-size: 16px;
@@ -26,14 +25,12 @@ body {
     cursor: pointer;
 }
 
-/* Estilo para la lista desplegable */
 #categorias {
     padding: 5px;
     font-size: 16px;
     border-radius: 10px;
 }
 
-/* Estilo para el área de respuesta */
 #chisteContainer {
     display: none;
     margin-top: 10px;
@@ -44,11 +41,11 @@ body {
     background-color: #f9f9f9;
 }
 
-/* Estilo para cambiar el tamaño de la imagen */
 div img {
     margin: 10px;
-    width: 300px; /* Cambia el ancho según tus preferencias */
-    height: auto; /* Mantenemos la proporción original de la imagen */
+    width: 300px;
+    height: auto; 
+    border-radius: 10px;
 }
 
 
